objects/LeadConvertTypes__mdt.object
<CustomObject>
    <label>Lead Convert Type</label>
    <pluralLabel>Lead Convert Types</pluralLabel>
    <fields>
        <fullName>ConvertDoctor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Convert Doctor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ConvertCaregiver__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Convert Caregiver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ConvertDoctorsSurgery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Convert Doctors Surgery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ConvertHealthcareInstitution__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Convert Healthcare Institution</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>